--- a/templates/users/reset_password/password_reset_form.html
+++ b/templates/users/reset_password/password_reset_form.html
@@ -9,6 +9,9 @@
                 style="border-color: var(--secondary-color);">
             {% if form.email.errors %}
             <small id="email-error" class="error text-red-500 text-xs italic">{{ form.email.errors }}</small>
+            <small class="help text-gray-400" style="display: none;">{{ form.email.help_text|safe }}</small>
+            {% else %}
+            <small class="help text-gray-400" >{{ form.email.help_text|safe }}</small>
             {% endif %}
         </div>
     </div>
