--- a/templates/base/partials/header/header.html
+++ b/templates/base/partials/header/header.html
@@ -1,14 +1,14 @@
 <header class="bg-primary shadow-md">
     <div class="container mx-auto px-6 py-3 flex justify-between items-center">
-        <a href="#" class="flex items-center text-xl font-bold text-white">
+        <a href="{% url 'index' %}" class="flex items-center text-xl font-bold text-white">
             <div class="w-10 h-10 bg-secondary rounded-full flex items-center justify-center">
                 <span class="text-primary font-semibold">T</span>
             </div>
             <span class="ml-2">Fakebook</span>
         </a>
         <nav class="hidden md:flex space-x-4">
-            <a href="#" class="text-white hover:text-accent">Home</a>
-            <a href="#" class="text-white hover:text-accent">Profile</a>
+            <a href="{% url 'index' %}" class="text-white hover:text-accent">Home</a>
+            <a href="{% url 'profiles:index' %}" class="text-white hover:text-accent">Profile</a>
             <a href="#" class="text-white hover:text-accent">Messages</a>
             <a href="#" class="text-white hover:text-accent">Notifications</a>
         </nav>
@@ -22,10 +22,10 @@
         </div>
         <div class="hidden md:block relative">
             {% if request.user.is_authenticated %}
-            <button class="flex items-center text-white focus:outline-none focus:text-accent">
-                <img class="h-8 w-8 rounded-full object-cover mr-2" src="https://via.placeholder.com/150"
+            <button class="flex items-center text-white focus:outline-none hover:text-accent">
+                <img class="h-9 w-9 rounded-full object-cover mr-2" src="{{ request.user.profile.avatar.url }}"
                     alt="User Avatar">
-                <span>Username</span>
+                <span>Hello, {{ request.user.profile.first_name }}</span>
             </button>
             {% else %}
             <a href="{% url 'users:login' %}" class="text-white hover:text-accent">Login</a>
