--- a/templates/profiles/profile.html
+++ b/templates/profiles/profile.html
@@ -3,41 +3,53 @@
 {% load static %}
 
 {% block content %}
-<div class="min-h-max h-96 flex flex-wrap items-center  justify-center mt-4">
-    <div class="container lg:w-2/6 xl:w-2/7 sm:w-full md:w-2/3 bg-white shadow-lg rounded-lg transformduration-200 easy-in-out">
-        <div class=" h-32 overflow-hidden" >
-            <img class="w-full" {% if profile.cover_image %} src="{{ profile.cover_image }}" {% else %} src="{% static "cover_image.jpeg" %}{% endif %}" alt="" />
+<div class="min-h-max h-full flex flex-wrap items-center justify-center my-4" id="profile-container">
+    <div class="container lg:w-2/6 xl:w-2/7 sm:w-full md:w-2/3 bg-white shadow-lg rounded-lg easy-in-out">
+        <div class="h-40 overflow-hidden">
+            <img class="w-full" {% if profile.cover_image %} src="{{ profile.cover_image.url }}" {% else %} src="{% static 'cover_image.jpeg' %}"{% endif %} alt="cover image" />
         </div>
-        <div class="flex justify-center px-5  -mt-12">
-            <img class="h-32 w-32 bg-white p-2 rounded-full" {% if profile.avatar %} src="{{ profile.avatar }}" {% else %} src="{% static "pacman_avatar_default.png" %}{% endif %}" alt="" />
-
+        <div class="flex justify-center px-5 -mt-12">
+            <img class="h-32 w-32 bg-white p-2 rounded-full object-cover" {% if profile.avatar %} src="{{ profile.avatar.url }}" {% else %} src="{% static 'pacman_avatar_default.png' %}{% endif %}" alt="Profile Avatar" />
         </div>
-        <div class=" ">
-            <div class="text-center px-14">
-                <h2 class="text-gray-800 text-3xl font-bold">
-                    {% if profile.first_name and profile.last_name %}
-                    {{ profile.first_name }} {{ profile.last_name }}
-                    {% else %}
-                    Your name
-                    {% endif %}
-                </h2>
-                <a class="text-gray-400 mt-2 hover:text-blue-500" href="#">@{{ profile.first_name}} {{ profile.last_name}}</a>
-                <p class="mt-2 text-gray-500 text-sm">
-                    {% if profile.bio %} {{ profile.bio }} {% else %} {% trans "Nếu bạn thấy dòng này thì có nghĩa bạn chưa giới thiệu về bản thân mình cho mọi người cùng biết bạn là ai!" %} {% endif %}
-                </p>
+        <div class="text-center px-14">
+            <h2 class="text-gray-800 text-3xl font-bold flex justify-center items-center">
+                {% if profile.first_name and profile.last_name %}
+                {{ profile.first_name }} {{ profile.last_name }}
+                {% else %}
+                Your name
+                {% endif %}
+                <button type="button" id="updateProfileButton" onclick="toggleModal()" hx-get="{% url 'profiles:update' %}" hx-target="#updateProfileModal">
+                    <img class="h-4 w-4 ml-2" src="{% static 'fontawesome/svgs/regular/pen-to-square.svg' %}" alt="Edit Profile">
+                </button>
+            </h2>
+            <a class="text-gray-400 mt-2 hover:text-blue-500" href="#">@{{ profile.first_name }} {{ profile.last_name }}</a>
+            <p class="mt-2 text-gray-500 text-sm">
+                {% if profile.bio %} {{ profile.bio }} {% else %} {% trans 'Nếu bạn thấy dòng này thì có nghĩa bạn chưa giới thiệu về bản thân mình cho mọi người cùng biết bạn là ai!' %} {% endif %}
+            </p>
+            <p class="mt-2 text-gray-500 text-sm">
+                <strong>Sex:</strong> {% if profile.sex %} {{ profile.sex }} {% else %} Not specified {% endif %}
+            </p>
+            <p class="mt-2 text-gray-500 text-sm">
+                <strong>Birthdate:</strong> {% if profile.birthdate %} {{ profile.birthdate|date:"F j, Y" }} {% else %} Not specified {% endif %}
+            </p>
+        </div>
+        <hr class="mt-6" />
+        <div class="flex bg-gray-50">
+            <div class="text-center w-1/2 p-4 hover:bg-gray-100 cursor-pointer">
+                <p><span class="font-semibold">2.5k </span> Followers</p>
             </div>
-            <hr class="mt-6" />
-            <div class="flex  bg-gray-50 ">
-                <div class="text-center w-1/2 p-4 hover:bg-gray-100 cursor-pointer">
-                    <p><span class="font-semibold">2.5 k </span> Followers</p>
-                </div>
-                <div class="border"></div>
-                <div class="text-center w-1/2 p-4 hover:bg-gray-100 cursor-pointer">
-                    <p> <span class="font-semibold">2.0 k </span> Following</p>
-                </div>
-
+            <div class="border"></div>
+            <div class="text-center w-1/2 p-4 hover:bg-gray-100 cursor-pointer">
+                <p><span class="font-semibold">2.0k </span> Following</p>
             </div>
         </div>
     </div>
 </div>
+
+<!-- Modal -->
+<div id="updateProfileModal" class="hidden fixed inset-0 z-50 overflow-y-auto">
+    <!-- Modal content will be dynamically loaded here -->
+</div>
+
+{% include 'profiles/profile.js.html' %}
 {% endblock %}
